NLP TP's/texts/robotics/robotics.stackexchange_0000068137.txt
Q:

no matching function for call to 'fromMsg(geometry_msgs::TransformStamped_ >::_transform_type, tf2::Transform&)'

Hello,
I am currently trying to cross compile the robot-localization package for a custom made OS with yocto. I managed to cross compile the other dependencies but I got a problem with this one.
I did 2 modifications in the CMakelists.txt from origin, you can see mine here http://pastebin.com/XYy53Cfs.
During compilation, it stops at 70%. I think there is a problem with the tf2-geometry-msgs library. It is included but the issue is in the fromMsg method.
[ 70%] Building CXX object CMakeFiles/ros_filter_utilities.dir/src/ros_filter_utilities.cpp.o

/home/david/Documents/NEOCORTEX-OS/build/tmp/work/armv6-vfp-poky-linux-gnueabi/robot-localization/2.2.1-r0/robot_localization-2.2.1/src/ros_filter_utilities.cpp: In function 'bool RobotLocalization::RosFilterUtilities::lookupTransformSafe(const tf2_ros::Buffer&, const string&, const string&, const ros::Time&, tf2::Transform&)':

/home/david/Documents/NEOCORTEX-OS/build/tmp/work/armv6-vfp-poky-linux-gnueabi/robot-localization/2.2.1-r0/robot_localization-2.2.1/src/ros_filter_utilities.cpp:80:104: error: no matching function for call to 'fromMsg(geometry_msgs::TransformStamped_<std::allocator<void> >::_transform_type, tf2::Transform&)'
     tf2::fromMsg(buffer.lookupTransform(targetFrame, sourceFrame, time).transform, targetFrameTrans);
                                                                                                    ^
/home/david/Documents/NEOCORTEX-OS/build/tmp/work/armv6-vfp-poky-linux-gnueabi/robot-localization/2.2.1-r0/robot_localization-2.2.1/src/ros_filter_utilities.cpp:80:104: note: candidates are:
In file included from /home/david/Documents/NEOCORTEX-OS/build/tmp/work/armv6-vfp-poky-linux-gnueabi/robot-localization/2.2.1-r0/robot_localization-2.2.1/src/ros_filter_utilities.cpp:36:0:

[...]
make: *** [all] Error 2
ERROR: oe_runmake failed
WARNING: exit code 1 from a shell command.

In the cpp file
try
{
 tf2::fromMsg(buffer.lookupTransform(targetFrame, sourceFrame, time).transform, targetFrameTrans);
}

Thanks

Originally posted by Dben on ROS Answers with karma: 35 on 2015-06-17
Post score: 0

A:

Are you certain you're using the latest release of the tf2_geometry_msgs package (0.5.11)? The method that it's looking for is here. If you're building from source, look at the file tf2_geometry_msgs/include/tf2_geometry_msgs/tf2_geometry_msgs.h and make sure you see that method.
EDIT: Also, you shouldn't need to modify the CMakeLists.txt file. I've compiled robot_localization on an ARM board (an ODROID U3) and it builds fine.

Originally posted by Tom Moore with karma: 13689 on 2015-06-17
This answer was ACCEPTED on the original site
Post score: 1

